# USVisaChat

./: .cursorrules  .gitignore  Dockerfile  Dockerfile.fullstack  FLY_DEPLOYMENT.md  FRONTEND_REFACTORING.md  FRONTEND_REFACTORING_COMPLETE.md  MONGODB_CERTIFICATE_SETUP.md  PROGRESS.md  PROJECT_PROFILE.md  PROMPTS.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_FINAL_SUMMARY.md  REFACTORING_GUIDE.md  WARP.md  chat_synthesizer.py  client_secret_1061991869101-gbktfleonqno7o8moercglgi26p4b78d.apps.googleusercontent.com.json  conversation_analyzer.py  csv_data_processor.py  docker-compose.yml  email_service.py  enhanced_chat_synthesizer.py  env.template  fly.toml  mongodb_auth.py  mongodb_certificate_validator.py  mongodb_chat.py  mongodb_connection.py  redbus2us_scraper.py  redbus_qa_bot.py  requirements.txt  run_vector_pipeline.py  scrape_redbus2us_h1b.py  scraping_log.txt  scraping_log_filtered.txt  setup_mongodb_atlas.sh  simple_vector_processor.py  telegram_csv_downloader.py  test-chat-demo.sh  (+2 more)
backend/: README.md  __init__.py  pyproject.toml
backend/api/: main.py  security_middleware.py
backend/config/: prompts.py  prompts.yaml
backend/models/: community_chat.py  mongodb_auth.py  mongodb_chat.py  mongodb_connection.py  news.py  user_auth.py
backend/scripts/: batch_scrape_h1b.py  embedding_analysis_and_recommendations.py  generate_article_vectors.py  improved_prompt_templates.py  init-mongo.js  knowledge_extractor.py  load_redbus_to_qdrant.py  load_scraped_articles_to_qdrant.py  run_knowledge_extraction.py  run_vector_pipeline.py  telegram_read.py  (+3 more)
(+76 files in other folders)
